<resources>
    <string name="app_name">Grangla</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_enter">Play</string>
    <string name="button_multiplayer">Play Online</string>
    <string name="button_exit">Exit</string>
    <string name="button_help">How to\nplay</string>
    <string name="me">Me: </string>
    <string name="him"> Opponent: </string>
    <string name="level">Level:</string>
    <string name="help_text">Try to collect four symbols in a row. Whoever does that more often wins. You get the right to make the next move after a certain amount of time since your last one has expired. The game gets faster as it approaches the end. Do not make excess moves because you lose your symbols if you put too many on the board. To play against player on other device use QR codes to connect via WiFi hotspot. Have fun!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="package_name">com.boardgame.miljac.grangla</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="beginner">beginner</string>
    <string name="intermediate">intermediate</string>
    <string name="expert">expert</string>
    <string name="custom_level">custom level</string>
    <string name="bluetooth_not_available">Bluetooth is not available!</string>
    <string name="game_title">Grangla</string>
    <string name="game_blurb">a</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Game with a random opponent</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name="score_label">%1$s - Me</string>
    <string name="opponent_left">Yout opponent has left the game!</string>
    <string name="button_legal_notices">Legal notices</string>
    <string name="name_version">Grangla 2.0</string>
    <string name="legal_notices_text"> (C) 2017-2022 Miljenko Stojičić\n
                                        All rights reserved\n
                                        Author: Miljenko Stojičić\n
                                        Illustrated by: Igor Ščekić
    </string>
    <string name="legal_notices_smaller_text">In development of this game the following MIDI driver is used:\n
                                        - https://github.com/billthefarmer/mididriver\n
                                        This library is licensed under the Apache License, Version 2.0, http://www.apache.org/licenses/\n
        For generating QR codes QRGenerator library is used:\n
        - https://github.com/androidmads/QRGenerator\n
        It is licenced under the MIT license, https://opensource.org/license/mit/\n
        For reading QR codes QRCodeScanner is used:\n
        - https://github.com/blikoon/QRCodeScanner\n
        It is licenced under the GPLv3 license, https://www.gnu.org/licenses/gpl-3.0.txt


    </string>
    <string name="high_scores_title">HIGH\nSCORES</string>
</resources>