<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/background">


    <ImageButton
        android:id="@+id/discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:onClick="exit"
        android:src="@drawable/exit"
        android:layout_gravity="right|top"
        android:gravity="right|top"
        android:background="@null"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>


    <TextView
        android:id="@+id/title_help"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/button_help" />



    <TextView
        android:id="@+id/text_help"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/help_text"
        android:layout_below="@id/title_help"/>


    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/button_legal_notices"
        android:textColor="#D9D9D9"
        android:onClick="legalNotices"
        android:textSize="12sp"
        android:layout_below="@id/text_help"
        android:layout_marginTop="25dp"
        android:paddingLeft="2dp"

 />


</RelativeLayout>
