<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_zvijezda"> <!--style="@style/LLScreen"-->

    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="0dp"
            android:paddingTop="0dp">




            <TextView
                android:id="@+id/player1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="35dp"
                android:textColor="@android:color/white"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18dp"
                android:text="@string/me"/>

            <Spinner
                android:id="@+id/spinner_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@id/player1"
                android:popupBackground="#46656565"
                android:background="@android:color/transparent"
                android:paddingTop="@dimen/activity_vertical_margin"

                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/player2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="25dp"
                android:textColor="@android:color/white"
                android:text="@string/him"
                android:layout_toRightOf="@id/spinner_player1"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18dp"/>
            <Spinner
                android:id="@+id/spinner_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@id/player2"
                android:popupBackground="#46656565"
                android:background="@android:color/transparent"
                android:paddingTop="@dimen/activity_vertical_margin"

                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="@dimen/activity_vertical_margin"/>



            <ImageButton
                android:id="@+id/discard_button_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:onClick="exit"
                android:src="@drawable/exit"
                android:layout_gravity="right|top"
                android:gravity="right|top"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>



            <Button android:id="@+id/button_quick_game"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/player2"
                android:text="@string/quick_game" />
            <Button android:id="@+id/button_invite_players"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_quick_game"
                android:text="@string/invite_players" />
            <Button android:id="@+id/button_see_invitations"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_quick_game"
                android:layout_toRightOf="@id/button_invite_players"
                android:text="@string/see_invitations" />
            <Button android:id="@+id/button_sign_out"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_invite_players"
                android:text="@string/sign_out" />
        </RelativeLayout>
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_oko">
    </LinearLayout>


    <RelativeLayout android:id="@+id/screen_game2" style="@style/LLScreen"
        android:scaleType="centerCrop"
        android:background="@drawable/background"
        android:gravity="center">

        <fragment
            android:id="@+id/Table"
            android:name="com.boardgame.miljac.grangla.gameUI.TableFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center_horizontal"
            />

        <fragment
            android:id="@+id/Result"
            android:name="com.boardgame.miljac.grangla.gameUI.ResultFragment"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_below="@id/Table" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"

            android:orientation="horizontal"
            android:layout_below="@+id/Result">


            <fragment
                android:id="@+id/CircleTime"
                android:name="com.boardgame.miljac.grangla.gameUI.CircleTimeFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"

                android:background="@null"
                android:orientation="vertical"
                android:layout_weight="2">

                <ToggleButton
                    android:id="@+id/toggle_sound_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="0dp"

                    android:drawableBottom="@drawable/toggle_sound"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"

                    android:textOn="@null"
                    android:textOff="@null"
                    android:textSize="0dp"
                    />

                <ImageButton
                    android:id="@+id/discard_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"

                    android:src="@drawable/exit"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"/>

            </LinearLayout>

            <fragment
                android:id="@+id/CrossTime"
                android:name="com.boardgame.miljac.grangla.gameUI.CrossTimeFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                />
        </LinearLayout>
    </RelativeLayout>




    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">
        <TextView android:id="@+id/instructions"
            style="@style/Instructions" android:text="@string/instructions" />
        <TextView android:id="@+id/my_score" style="@style/ScoreDisplay" />
        <Button android:id="@+id/button_click_me"
            style="@style/GameButton"
            android:text="@string/click_me"
            android:layout_marginBottom="20dp" />
        <TextView android:id="@+id/countdown" style="@style/FigureLabel" />

        <LinearLayout style="@style/ScoresBox">
            <TextView android:id="@+id/score0" style="@style/ScoreText" />
            <TextView android:id="@+id/score1" style="@style/ScoreText" />
            <TextView android:id="@+id/score2" style="@style/ScoreText" />
            <TextView android:id="@+id/score3" style="@style/ScoreText" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>