<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/background">


    <ImageButton
        android:id="@+id/discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:onClick="exit"
        android:src="@drawable/exit"
        android:layout_gravity="right|top"
        android:gravity="right|top"
        android:background="@null"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"/>


    <TextView
        android:id="@+id/title_help"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="@string/name_version" />



    <TextView
        android:id="@+id/notices_text1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:textSize="17dp"
        android:text="@string/legal_notices_text"
        android:layout_below="@id/title_help"/>

    <TextView
        android:id="@+id/notices_text2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="10dp"
        android:textSize="12dp"
        android:text="@string/legal_notices_smaller_text"
        android:autoLink="web"
        android:layout_below="@id/notices_text1"/>



    <!--ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp"
        android:fadeScrollbars="false"
        android:layout_below="@id/notices_text2">

    <TextView
        android:id="@+id/notices_text3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="9dp"
        android:text="@string/legal_notices_apache2"
        android:autoLink="web"
        />

    </ScrollView-->

</RelativeLayout>
